# citra

./: CMakeLists.txt
src/citra/: citra.aps  citra.cpp  config.cpp  default_ini.h
src/citra/emu_window/: emu_window_sdl2.cpp  emu_window_sdl2.h
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  citra-qt.aps  config.cpp  configure_general.cpp  configure_general.ui  configure_input.cpp  configure_input.h  configure_input.ui  game_list.cpp  game_list.h  game_list_p.h  hotkeys.cpp  hotkeys.h  main.cpp  main.h  ui_settings.h
src/citra_qt/configuration/: config.cpp  configure.ui  configure_dialog.cpp  configure_general.ui  configure_hotkeys.cpp  configure_hotkeys.h  configure_hotkeys.ui
src/citra_qt/debugger/: wait_tree.cpp
src/citra_qt/debugger/graphics/: graphics_breakpoints.cpp  graphics_cmdlists.cpp  graphics_tracing.cpp  graphics_vertex_shader.cpp
src/common/: CMakeLists.txt
src/common/logging/: backend.cpp  log_config.cpp  log_config.h  log_utils.cpp  log_utils.h  text_formatter.cpp
src/core/: memory.cpp  memory.h  settings.h
src/core/arm/dynarmic/: arm_dynarmic.cpp
src/core/arm/dyncom/: arm_dyncom_interpreter.cpp
src/core/file_sys/: archive_backend.cpp
src/core/hle/applets/: erreula.cpp  mii_selector.cpp  swkbd.cpp
src/core/hle/kernel/: kernel.h  shared_memory.cpp  thread.cpp
src/core/hle/service/: dsp_dsp.cpp
src/core/hle/service/apt/: apt.cpp
src/core/hle/service/fs/: archive.cpp
src/core/hw/: gpu.h
src/video_core/: pica.h  rasterizer.cpp  rasterizer_interface.h  swrasterizer.h
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer.h  gl_rasterizer_cache.cpp  gl_rasterizer_cache.h
